@@ -7,6 +7,7 @@
  * Nokogiri::XML::Node#before will prepend text nodes (LH #44)
  * Nokogiri::XML::Node#after will append text nodes
  * Nokogiri::XML::Node#search automatically registers root namepsaces (LH #42)
+ * Nokogiri::XML::NodeSet#search automatically registers namespaces
 
 === 1.2.1 / 2008-02-23
 
